--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .venv
 .idea
-/Data/Accessories
-/Data/Enemies
-/Data/Outfits
-/Data/Players
-/Data/Weapons
+/Data/Accessories/*
+/Data/Enemies/*
+/Data/Outfits/*
+/Data/Players/*
+/Data/Weapons/*
